# Data-Structures-Lab-3

./: CMakeLists.txt  DSAvlTree.h  DocumentParser.cpp  DocumentParser.h  Hash.h  IndexHandler.cpp  IndexHandler.h  QueryProcessor.cpp  QueryProcessor.h  SearchEngine.cpp  SearchEngine.h  UserInterface.cpp  UserInterface.h  main.cpp  porter2_stemmer.cpp  porter2_stemmer.h  rapidJSONExample.cpp  testDocumentParser.cpp  test_DSAvlTree.cpp  test_DSHash.cpp  test_IndexHandler.cpp  test_QueryProcessor.cpp
